--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">🌐 About Me</h2>
       <p><strong>Industry:</strong> Information Technology & Services</p>
       <p><strong>Location:</strong> Vietnam</p>
-      <p><strong>Languages:</strong> Vietnamese (Native), English (Professional)</p>
+      <p><strong>Languages:</strong> Vietnamese (Native), English</p>
     </section>
 
     <!-- Who I Am -->
