--- a/index.html
+++ b/index.html
@@ -1,85 +1,69 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Đạt Trần – IT Manager</title>
+  <title>Đạt Trần | IT Manager</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-900 text-gray-100 font-sans leading-relaxed tracking-wide">
-
-  <div class="max-w-4xl mx-auto p-6">
-    <!-- Profile Image -->
-    <div class="flex flex-col items-center mb-10">
-      <img src="f39543ae-51a3-42ac-9bec-219b9515f26d.png" alt="Đạt Trần" class="w-48 h-48 object-cover rounded-full shadow-lg border-4 border-gray-700 mb-4">
+<body class="bg-gray-900 text-gray-100 font-sans leading-relaxed">
+  <div class="max-w-3xl mx-auto px-6 py-12">
+    <div class="flex flex-col items-center text-center">
+      <img src="your-image.png" alt="Dat Tran" class="w-32 h-32 rounded-full mb-4 border-4 border-gray-700" />
       <h1 class="text-3xl font-bold">Đạt Trần</h1>
       <p class="text-lg text-gray-400">IT Manager | Digital Solutions Architect</p>
+      <p class="text-sm text-gray-500">Vietnam · Vietnamese / English</p>
     </div>
 
-    <!-- About -->
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">🌐 About Me</h2>
-      <p><strong>Industry:</strong> Information Technology & Services</p>
-      <p><strong>Location:</strong> Vietnam</p>
-      <p><strong>Languages:</strong> Vietnamese (Native), English</p>
-    </section>
+    <hr class="my-8 border-gray-700" />
 
-    <!-- Who I Am -->
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">💡 Who I Am</h2>
+    <section>
+      <h2 class="text-xl font-semibold mb-2">💡 Who I Am</h2>
       <p>
-        I’m an experienced <strong>IT Manager</strong> with a strong foundation in <strong>IT infrastructure, CRM systems, digital marketing, and website operations</strong>.
-        Over the years, I’ve helped businesses optimize their IT environments, integrate efficient customer solutions, and grow their digital presence through data-driven strategies.
+        I’m an experienced <strong>IT Manager</strong> with a strong foundation in <strong>IT infrastructure, CRM systems, digital marketing, and website operations</strong>. Over the years, I’ve helped businesses optimize their IT environments, integrate efficient customer solutions, and grow their digital presence through data-driven strategies.
       </p>
     </section>
 
-    <!-- Skills -->
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">🔧 Key Skills & Expertise</h2>
+    <section class="mt-8">
+      <h2 class="text-xl font-semibold mb-2">🔧 Key Skills & Expertise</h2>
       <ul class="list-disc list-inside space-y-1">
-        <li>IT Management & Service Delivery</li>
-        <li>Network Administration & Technical Support</li>
-        <li>Website Administration & CMS (WordPress, Custom)</li>
-        <li>CRM Strategy & Implementation (HubSpot, Zoho, custom-built)</li>
-        <li>Digital Marketing (SEO, SEM, Google Analytics)</li>
-        <li>Project Management & Cross-functional Coordination</li>
+        <li>IT Management</li>
+        <li>Service Delivery</li>
+        <li>Network Administration</li>
+        <li>Technical Support</li>
+        <li>Virtualization (VMware, Proxmox, Docker)</li>
+        <li>Firewall & Routing (pfSense, OPNsense, MikroTik)</li>
+        <li>Website & CMS Management</li>
+        <li>CRM Implementation</li>
+        <li>Digital Marketing</li>
+        <li>Project Management</li>
       </ul>
     </section>
 
-    <!-- What I Do -->
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">🚀 What I Do</h2>
-      <p>
-        Whether managing on-premise infrastructure or cloud-based platforms, I ensure <strong>system stability, security, and scalability</strong>.
-        I also bridge the gap between business needs and technology, delivering <strong>efficient tools and digital workflows</strong> to help companies run smarter.
-      </p>
-    </section>
-
-    <!-- Tools -->
-    <section class="mb-10">
-      <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">📊 Tools & Platforms I Use</h2>
+    <section class="mt-8">
+      <h2 class="text-xl font-semibold mb-2">📊 Tools & Platforms I Use</h2>
       <ul class="list-disc list-inside space-y-1">
         <li>Microsoft Office, Google Workspace</li>
-        <li>WordPress, Shopify, Joomla</li>
-        <li>Google Analytics, Search Console</li>
-        <li>Airtable, Notion, Monday.com</li>
-        <li>Basic knowledge of Adobe XD, Canva</li>
+        <li>WordPress, Shopify, Joomla, Ghost CMS</li>
+        <li>HubSpot, Zoho CRM, Bitrix24</li>
+        <li>Google Analytics, Search Console, Meta Ads, Ahrefs</li>
+        <li>Airtable, Notion, Trello, Jira, Monday.com</li>
+        <li>VMware ESXi, Proxmox VE, Docker</li>
+        <li>pfSense, OPNsense, MikroTik RouterOS</li>
         <li>Automation with Make.com, Zapier, n8n</li>
+        <li>Basic knowledge of Adobe XD, Canva</li>
       </ul>
     </section>
 
-    <!-- Contact -->
-    <section>
-      <h2 class="text-xl font-semibold mb-2 border-b border-gray-700 pb-1">🤝 Let’s Connect</h2>
+    <section class="mt-8">
+      <h2 class="text-xl font-semibold mb-2">🤝 Let’s Connect</h2>
       <p>I’m open to freelance consulting, long-term partnerships, or full-time roles in <strong>IT leadership, digital transformation, or systems strategy</strong>.</p>
-      <p class="mt-2">
-        📧 Email: <a href="mailto:shillen2201@gmail.com" class="text-blue-400 underline">shillen2201@gmail.com</a><br/>
-        🌐 LinkedIn: <a href="https://www.linkedin.com/in/shillen2201" class="text-blue-400 underline">linkedin.com/in/shillen2201</a><br/>
-        📍 Based in Vietnam – Available for remote & on-site work
-      </p>
+      <ul class="mt-4 space-y-1">
+        <li>📧 Email: <a href="mailto:shillen2201@gmail.com" class="text-blue-400 hover:underline">shillen2201@gmail.com</a></li>
+        <li>🌐 LinkedIn: <a href="https://www.linkedin.com/in/shillen2201/" class="text-blue-400 hover:underline">linkedin.com/in/shillen2201</a></li>
+        <li>📍 Based in Vietnam – Available for remote & on-site work</li>
+      </ul>
     </section>
-
   </div>
-
 </body>
 </html>
