--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Đạt Trần | IT Manager</title>
+  <title>About me | taD</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-gray-100 font-sans leading-relaxed">
   <div class="max-w-3xl mx-auto px-6 py-12">
     <div class="flex flex-col items-center text-center">
-      <img src="your-image.png" alt="Dat Tran" class="w-32 h-32 rounded-full mb-4 border-4 border-gray-700" />
+      <img src="avatar.png" alt="Dat Tran" class="w-32 h-32 rounded-full mb-4 border-4 border-gray-700" />
       <h1 class="text-3xl font-bold">Đạt Trần</h1>
       <p class="text-lg text-gray-400">IT Manager | Digital Solutions Architect</p>
       <p class="text-sm text-gray-500">Vietnam · Vietnamese / English</p>
