--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
       <h2 class="text-xl font-semibold mb-2">📊 Tools & Platforms I Use</h2>
       <ul class="list-disc list-inside space-y-1">
         <li>Microsoft Office, Google Workspace</li>
-        <li>WordPress, Shopify, Joomla, Ghost CMS</li>
-        <li>HubSpot, Zoho CRM, Bitrix24</li>
+        <li>WordPress, Shopify, Joomla</li>
         <li>Google Analytics, Search Console, Meta Ads, Ahrefs</li>
         <li>Airtable, Notion, Trello, Jira, Monday.com</li>
         <li>VMware ESXi, Proxmox VE, Docker</li>
