--- a/index.html
+++ b/index.html
@@ -1,68 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About me | taD</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Đạt Trần – IT Manager</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #e0e0e0;
+            line-height: 1.6;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        img.avatar {
+            width: 160px;
+            height: 160px;
+            border-radius: 50%;
+            object-fit: cover;
+            display: block;
+            margin: 0 auto 20px auto;
+            border: 3px solid #333;
+        }
+        h1, h2 {
+            color: #f5f5f5;
+        }
+        a {
+            color: #90caf9;
+        }
+        hr {
+            border: 0;
+            height: 1px;
+            background-color: #333;
+            margin: 30px 0;
+        }
+    </style>
 </head>
-<body class="bg-gray-900 text-gray-100 font-sans leading-relaxed">
-  <div class="max-w-3xl mx-auto px-6 py-12">
-    <div class="flex flex-col items-center text-center">
-      <img src="avatar.png" alt="Dat Tran" class="w-32 h-32 rounded-full mb-4 border-4 border-gray-700" />
-      <h1 class="text-3xl font-bold">Đạt Trần</h1>
-      <p class="text-lg text-gray-400">IT Manager | Digital Solutions Architect</p>
-      <p class="text-sm text-gray-500">Vietnam · Vietnamese / English</p>
+<body>
+    <div class="container">
+        <img src="avatar.png" alt="Đạt Trần" class="avatar" />
+        <h1>🌐 About Me</h1>
+        <h2>👨‍💼 IT Manager | Digital Solutions Architect</h2>
+        <p><strong>Industry:</strong> Information Technology & Services<br/>
+           <strong>Location:</strong> Vietnam<br/>
+           <strong>Languages:</strong> Vietnamese (Native), English</p>
+        <hr/>
+
+        <h2>💡 Who I Am</h2>
+        <p>I’m an experienced <strong>IT Manager</strong> with a strong foundation in <strong>IT infrastructure, CRM systems, digital marketing, and website operations</strong>. Over the years, I’ve helped businesses optimize their IT environments, integrate efficient customer solutions, and grow their digital presence through data-driven strategies.</p>
+        <hr/>
+
+        <h2>🚀 What I Do</h2>
+        <p><em>I turn IT chaos into clarity — building systems that work, scale, and don’t break on Monday mornings.</em></p>
+        <hr/>
+
+        <h2>🔧 Key Skills & Expertise</h2>
+        <ul>
+            <li>IT Management</li>
+            <li>Service Delivery</li>
+            <li>Network Administration</li>
+            <li>Technical Support</li>
+            <li>Virtualization (VMware, Proxmox, Docker)</li>
+            <li>Firewall & Routing (pfSense, OPNsense, MikroTik)</li>
+            <li>Website & CMS Management</li>
+            <li>CRM Implementation</li>
+            <li>Digital Marketing</li>
+            <li>Project Management</li>
+        </ul>
+        <hr/>
+
+        <h2>📊 Tools & Platforms I Use</h2>
+        <ul>
+            <li>Microsoft Office, Google Workspace</li>
+            <li>WordPress, Shopify, Joomla, Ghost CMS</li>
+            <li>HubSpot, Zoho CRM, Bitrix24</li>
+            <li>Google Analytics, Search Console, Meta Ads, Ahrefs</li>
+            <li>Airtable, Notion, Trello, Jira, Monday.com</li>
+            <li>VMware ESXi, Proxmox VE, Docker</li>
+            <li>pfSense, OPNsense, MikroTik RouterOS</li>
+            <li>Automation with Make.com, Zapier, n8n</li>
+            <li>Basic knowledge of Adobe XD, Canva</li>
+        </ul>
+        <hr/>
+
+        <h2>🤝 Let’s Connect</h2>
+        <p>I’m open to freelance consulting, long-term partnerships, or full-time roles in <strong>IT leadership, digital transformation, or systems strategy</strong>.</p>
+        <p>📧 Email: shillen2201@gmail.com<br/>
+           🌐 LinkedIn: <a href="https://www.linkedin.com/in/shillen2201/" target="_blank">linkedin.com/in/shillen2201</a><br/>
+           📍 Based in Vietnam – Available for remote & on-site work</p>
     </div>
-
-    <hr class="my-8 border-gray-700" />
-
-    <section>
-      <h2 class="text-xl font-semibold mb-2">💡 Who I Am</h2>
-      <p>
-        I’m an experienced <strong>IT Manager</strong> with a strong foundation in <strong>IT infrastructure, CRM systems, digital marketing, and website operations</strong>. Over the years, I’ve helped businesses optimize their IT environments, integrate efficient customer solutions, and grow their digital presence through data-driven strategies.
-      </p>
-    </section>
-
-    <section class="mt-8">
-      <h2 class="text-xl font-semibold mb-2">🔧 Key Skills & Expertise</h2>
-      <ul class="list-disc list-inside space-y-1">
-        <li>IT Management</li>
-        <li>Service Delivery</li>
-        <li>Network Administration</li>
-        <li>Technical Support</li>
-        <li>Virtualization (VMware, Proxmox, Docker)</li>
-        <li>Firewall & Routing (pfSense, OPNsense, MikroTik)</li>
-        <li>Website & CMS Management</li>
-        <li>CRM Implementation</li>
-        <li>Digital Marketing</li>
-        <li>Project Management</li>
-      </ul>
-    </section>
-
-    <section class="mt-8">
-      <h2 class="text-xl font-semibold mb-2">📊 Tools & Platforms I Use</h2>
-      <ul class="list-disc list-inside space-y-1">
-        <li>Microsoft Office, Google Workspace</li>
-        <li>WordPress, Shopify, Joomla</li>
-        <li>Google Analytics, Search Console, Meta Ads, Ahrefs</li>
-        <li>Airtable, Notion, Trello, Jira, Monday.com</li>
-        <li>VMware ESXi, Proxmox VE, Docker</li>
-        <li>pfSense, OPNsense, MikroTik RouterOS</li>
-        <li>Automation with Make.com, Zapier, n8n</li>
-        <li>Basic knowledge of Adobe XD, Canva</li>
-      </ul>
-    </section>
-
-    <section class="mt-8">
-      <h2 class="text-xl font-semibold mb-2">🤝 Let’s Connect</h2>
-      <p>I’m open to freelance consulting, long-term partnerships, or full-time roles in <strong>IT leadership, digital transformation, or systems strategy</strong>.</p>
-      <ul class="mt-4 space-y-1">
-        <li>📧 Email: <a href="mailto:shillen2201@gmail.com" class="text-blue-400 hover:underline">shillen2201@gmail.com</a></li>
-        <li>🌐 LinkedIn: <a href="https://www.linkedin.com/in/shillen2201/" class="text-blue-400 hover:underline">linkedin.com/in/shillen2201</a></li>
-        <li>📍 Based in Vietnam – Available for remote & on-site work</li>
-      </ul>
-    </section>
-  </div>
 </body>
 </html>
